Add color and typography, and navbar

--- a/app.json
+++ b/app.json
@@ -7,7 +7,6 @@
     "icon": "./assets/images/icon.png",
     "scheme": "focushelperapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
@@ -39,7 +38,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
